--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -5338,3 +5338,163 @@ order by name;
 * **프로세스 개선:** WAF 규칙 배포 시에도 일반 소프트웨어 배포처럼 단계적 롤아웃(Staged Rollout) 도입.
 * **비상 대응:** 장애 발생 시 내부 관리 도구 및 상태 페이지(Status Page)에 접속할 수 있도록 우회 경로 확보.
 
+## 25.11.27
+
+### [B-Trees Why Every Database Uses Them - by Mehmet Gökçe](https://mehmetgoekce.substack.com/p/b-trees-why-every-database-uses-them)
+
+- 이진 탐색은 RAM 환경에서는 효율적인 방법이지만 Disk 환경에서는 재앙이다.
+  - disk 의 seek 타임은 충분히 크기 때문에 depth 가 깊을 수록 비용이 눈에 띄게 비싸진다.
+  - 그래서 B-Trees 를 채택. 노드가 두 개의 자식을 가지는 이진 탐색과 다르게, b-tree 의 노드는 다수의 leaf를 포함 -> 트리의 깊이를 압축
+  - 이 노드의 사이즈는 한번에 조회할 수 있는 disk 의 Block 사이즈 (현대 ssd 기준 대락 4KB) 이내로 조정.
+
+- 자주 까먹지만.. B-Tree 의 self balancing 이 필요한 이유는, 데이터 쏠림(Skewness) 이 생긴 경우 추가 Update / Insert / Delete 동작에 비용이 갑자기 커질 수 있다.
+  * 이진 탐색 같은 경우 한쪽으로 데이터가 쏠리면 트리의 한 부분으로 깊이가 깊어질 수 있다.
+  * B-tree 의 가장 큰 장점은 모든 리프 노드가 같은 깊이에 있는 것
+
+- "앞 노드부터 꽉 채우는 방식"의 치명적 단점
+  * 이를 실제로 구현한 자료구조(예: ISAM, Packed Array)도 있지만, **빈번한 데이터 변경(Insert/Update/Delete)**이 일어나는 DB 환경에서는 치명적
+  * 사이즈가 큰 데이터 배열에서 맨 앞에 새로운 원소를 추가하는 경우, 기존 데이터를 전부 하나씩 뒤로 미는(Shift) 비용이 추가되는 것
+  * B-Tree 는 노드를 100% 전부 채우지 않는다. 보통 50~100% 사이 점유율을 유지하고 빈 공간을 남겨둔다.
+
+**The Binary Tree Disaster**
+
+With a BST(Binary-Search Tree) on disk, each node is stored in a separate disk block. Traversing from parent to child requires a disk seek.
+
+For 1 million records:
+
+- Height: 20 nodes
+- Disk seeks: 20
+- Time on HDD: 20 × 10 ms = 200 milliseconds
+- Time on SSD: 20 × 0.1 ms = 2 milliseconds
+
+That’s acceptable for SSDs, but terrible for HDDs. And it gets worse as the tree grows.
+
+For 1 billion records:
+
+- Height: 30 nodes
+- Time on HDD: 30 × 10 ms = 300 milliseconds
+- Time on SSD: 30 × 0.1 ms = 3 milliseconds
+
+The fundamental problem: BST fanout is too low (only 2 children per node). We need more children per node to reduce tree height.
+
+**B-Tree 성능 특성 요약**
+
+($n$: 키의 개수, $f$: 팬아웃/차수/노드가 가질 수 있는 최대 자식 수)
+
+- **조회 (Lookup)**
+  - **시간 복잡도:** $O(\log n)$
+  - **디스크 I/O:** $\log_f(n)$ (트리의 높이만큼, 레벨 당 1회 읽기)
+  - **상세 메커니즘:**
+    - 트리 높이: $\log_f(n)$
+    - 노드 내 이진 탐색: $\log_2(f)$
+    - 총 비교 연산: $\log_f(n) \times \log_2(f) = O(\log n)$
+
+- **삽입 (Insert)**
+  - **시간 복잡도:** $O(\log n)$
+  - **디스크 I/O:** $O(\log n)$ 읽기 + $O(\log n)$ 쓰기
+  - **상세 메커니즘:**
+    - 삽입 위치 탐색: $O(\log n)$
+    - 리프 노드 삽입 및 키 이동(Shift): $O(f)$
+    - 분할(Split): 노드가 꽉 찼을 경우 키 이동 $O(f)$
+    - 전파: 최악의 경우 루트까지 분할이 전파됨 ($O(\log n)$ 레벨)
+
+- **삭제 (Delete)**
+  - **시간 복잡도:** $O(\log n)$
+  - **디스크 I/O:** $O(\log n)$ 읽기 + $O(\log n)$ 쓰기
+  - **상세 메커니즘:**
+    - 삭제할 키 탐색: $O(\log n)$
+    - 리프 노드 삭제 및 키 이동(Shift): $O(f)$
+    - 병합(Merge): 노드가 너무 비었을 경우 형제 노드와 병합 및 키 이동 $O(f)$
+    - 전파: 최악의 경우 루트까지 병합이 전파됨 ($O(\log n)$ 레벨)
+
+- **공간 (Space)**
+  - **공간 복잡도:** $O(n)$
+  - **상세 메커니즘:**
+    - 저장 방식: 각 키는 중복 없이 한 번만 저장됨
+    - 오버헤드: 내부 노드(포인터, 구분자 키 등)가 전체 데이터 크기의 약 10~20% 차지
+    - 점유율(Occupancy): 노드는 보통 50~90% 정도 채워진 상태 유지
+    - 효율성: 팬아웃($f$)이 높을수록 실제 데이터 대비 포인터 오버헤드 비율이 감소함
+
+**Summarized By Gemini**
+
+제공해주신 글은 "Database Internals"를 공부하며 B-Tree(B-트리)를 직접 구현하려던 저자의 경험담으로 시작해, 왜 B-Tree가 지난 50년간 데이터베이스 디스크 스토리지의 표준으로 자리 잡았는지를 기술적으로 깊이 있게 설명하고 있습니다.
+
+#### **서론: 3년 전 새벽의 깨달음**
+
+저자는 B-Tree를 파이썬으로 직접 구현하던 중, 노드가 가득 찼을 때 트리가 붕괴하는 치명적인 버그(Off-by-one error, 1 차이로 인한 오류)를 겪습니다. 해결책을 찾기 위해 MySQL(InnoDB)의 소스 코드를 뜯어보던 중, 전문 개발자들도 노드 분할(Split) 시점("초과" vs "이상")을 처리하기 위해 동일한 고민을 했음을 발견합니다. 이 순간 저자는 왜 모든 주요 데이터베이스가 디스크 기반 인덱싱을 위해 **B-Tree(정확히는 B+Tree)**를 사용하는지 깨닫게 됩니다.
+
+#### **1. 문제점: 디스크 위에서의 이진 탐색 트리 (BST)**
+메모리(RAM) 상에서는 이진 탐색 트리(BST)가 효율적이지만, 디스크에서는 재앙에 가깝습니다.
+
+* **디스크 I/O 비용:** 디스크는 램보다 100배에서 100,000배 느립니다. 디스크는 '블록' 단위(보통 4KB~16KB)로 데이터를 읽습니다.
+* **높이(Height) 문제:** BST는 각 노드가 최대 2개의 자식만 가집니다(낮은 팬아웃).
+    * 100만 개의 레코드가 있다면 트리의 높이는 약 20이 됩니다 ($\log_2 1,000,000 \approx 20$).
+    * 최악의 경우 데이터를 찾기 위해 **20번의 디스크 탐색(Seek)**이 필요합니다. HDD 기준 200ms가 소요되는데, 이는 데이터베이스로서 용납할 수 없는 속도입니다.
+
+
+
+#### **2. 해결책: B-Tree**
+B-Tree는 디스크 접근을 최적화하기 위해 고안된 '자가 균형 트리'입니다. 핵심은 노드 하나에 2개가 아닌 **수백, 수천 개의 자식**을 갖는 것입니다.
+
+* **높은 팬아웃 (High Fanout):** 하나의 디스크 블록(4KB~16KB)에 최대한 많은 키(Key)를 채워 넣습니다.
+* **획기적인 높이 감소:**
+    * 팬아웃이 100일 때, 100만 개의 레코드도 높이 3이면 충분합니다 ($100^3 = 1,000,000$).
+    * 10억 개의 레코드도 높이 5면 충분합니다.
+    * 결과적으로 디스크 탐색 횟수가 20회에서 3~5회로 줄어듭니다.
+
+**B-Tree의 구조 (B+Tree 변형)**
+* **루트 노드:** 트리의 최상단.
+* **내부 노드 (Internal Nodes):** 길 안내 역할. 키와 포인터만 저장.
+* **리프 노드 (Leaf Nodes):** 실제 데이터(Key-Value)가 저장되는 곳. 모든 리프 노드는 같은 깊이에 존재합니다.
+    * *참고: 대부분의 최신 DB는 내부 노드에 데이터를 저장하지 않는 **B+Tree**를 사용합니다.*
+
+---
+
+#### **3. 동작 원리 및 알고리즘**
+
+##### **검색 (Lookup)**
+* 루트에서 리프까지 내려가며 각 노드 내부에서 이진 탐색을 수행합니다.
+* 시간 복잡도: $O(\log n)$
+* 전체 비교 횟수는 BST와 비슷할 수 있으나, **디스크 I/O 횟수**가 $\log_{fanout} n$으로 획기적으로 줄어듭니다.
+
+##### **삽입 (Insert)과 분할 (Split)**
+1.  알맞은 리프 노드를 찾아 키를 삽입합니다.
+2.  만약 노드가 가득 찼다면(용량 초과), 노드를 두 개로 **분할(Split)**합니다.
+3.  중간값(Middle Key)을 부모 노드로 올려보냅니다(Promote).
+4.  부모도 가득 찼다면 이 과정이 루트까지 연쇄적으로 일어납니다. 이것이 B-Tree의 높이가 높아지는 유일한 경우입니다.
+
+
+
+##### **삭제 (Delete)와 병합 (Merge)**
+* 노드의 데이터가 너무 적어지면(보통 50% 미만), 형제 노드와 **병합(Merge)**하여 균형을 맞춥니다.
+
+---
+
+#### **4. 실제 데이터베이스 활용 사례**
+
+* **MySQL (InnoDB):**
+    * **Clustered Index (Primary Key):** 리프 노드에 실제 행(Row) 데이터 전체를 저장합니다.
+    * **Secondary Index:** 리프 노드에 Primary Key 값을 저장합니다.
+    * 페이지 크기 16KB, 팬아웃 ~100-200.
+* **PostgreSQL:** 기본 인덱스로 B-Tree 사용. 페이지 크기 8KB.
+* **SQLite:** 테이블과 인덱스 모두 B-Tree로 관리.
+* **MongoDB (WiredTiger):** 인덱스에 B-Tree 사용.
+
+---
+
+#### **5. 한계점 및 대안 (Trade-offs)**
+
+B-Tree가 완벽한 것은 아닙니다.
+
+1.  **쓰기 증폭 (Write Amplification):** 삽입 시 분할이 발생하면 여러 블록을 다시 써야 하므로 쓰기 작업이 많은 경우 성능이 저하될 수 있습니다.
+    * *대안:* 쓰기 위주의 작업에는 **LSM-Tree** (RocksDB, Cassandra 등)가 유리합니다.
+2.  **비순차 키 범위 검색:** 인덱스 되지 않은 컬럼의 범위 검색이나 다중 컬럼 검색에 약할 수 있습니다.
+3.  **메모리 오버헤드:** 성능을 위해 내부 노드들을 메모리에 캐싱해야 합니다 (DB 크기의 10~20% 권장).
+
+#### **요약: 왜 B-Tree가 승리했는가?**
+
+50년이 지난 지금도 B-Tree가 지배적인 이유는 **디스크 스토리지의 물리적 특성**을 가장 잘 반영했기 때문입니다.
+
+* **최소한의 디스크 I/O:** 높은 팬아웃으로 트리 높이를 낮춤.
+* **자동 균형:** 분할과 병합을 통해 검색 성능을 일정하게 유지.
+* **범용성:** HDD(순차 접근 선호)와 SSD(블록 접근) 모두에서 우수한 성능.
