--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -5498,3 +5498,44 @@ B-Tree가 완벽한 것은 아닙니다.
 * **최소한의 디스크 I/O:** 높은 팬아웃으로 트리 높이를 낮춤.
 * **자동 균형:** 분할과 병합을 통해 검색 성능을 일정하게 유지.
 * **범용성:** HDD(순차 접근 선호)와 SSD(블록 접근) 모두에서 우수한 성능.
+
+## 25.11.29
+
+### [How good engineers write bad code at big companies](https://www.seangoedecke.com/bad-code-at-big-companies/)
+
+대기업에는 유능한 엔지니어들이 많고, 급여도 높으며, 업무 속도도 비교적 느려 보입니다. 그런데 왜 엉망인 코드(Bad Code)가 나올까요? 이 글은 그 원인이 엔지니어의 무능함이 아니라 **구조적인 시스템**에 있다고 분석합니다.
+
+**Summarized By Gemini**
+
+#### 1. 대부분의 코드는 '초보자'가 수정한다 (Relative Beginners)
+
+대기업의 가장 큰 문제는 엔지니어들이 자신의 전문 분야가 아닌 곳에서 일하는 경우가 많다는 점입니다.
+
+* **짧은 근속 연수:** 대기업 엔지니어의 평균 근속 기간은 1~2년에 불과합니다. 특히 주식 보상(RSU) 구조가 4년 뒤에 급격히 줄어들게 설계되어 있어, 엔지니어들이 4년마다 이직하도록 유도합니다.
+* **잦은 내부 이동:** 잦은 조직 개편(Re-org)으로 인해 엔지니어는 1년마다 팀이나 담당 서비스가 바뀝니다.
+* **코드베이스와의 괴리:** 서비스와 코드는 10년 이상 되었지만, 그것을 만지는 엔지니어는 해당 코드나 언어를 접한 지 6개월도 안 된 '초보자'들입니다. 즉, 항상 **"배우는 중(figuring it out)"**인 사람들이 코드를 짭니다.
+
+#### 2. '중간값' 엔지니어의 현실과 나쁜 코드의 탄생
+
+대기업의 평범하고 유능한 엔지니어는 보통 이런 상황입니다:
+* 채용 기준을 통과할 만큼 똑똑하지만,
+* 낯선 코드베이스나 언어를 다루고 있고,
+* 쏟아지는 변경 사항과 자신의 업무, 그리고 마감 기한에 쫓깁니다.
+
+**나쁜 코드가 만들어지는 과정:**
+1.  주니어 엔지니어가 잘 모르는 코드의 버그 수정 티켓을 맡습니다.
+2.  며칠을 헤매다 '임시방편(Hacky)' 해결책을 찾습니다.
+3.  바쁜 시니어 엔지니어가 잠깐 훑어보고, 그나마 작동할 만한 방향으로 살짝 수정해 줍니다.
+4.  테스트를 통과하고 배포된 뒤, 모두 다음 업무로 넘어갑니다.
+5.  5년 뒤 누군가 이 코드를 보고 "대기업에서 누가 코드를 이따위로 짰어?"라고 경악합니다.
+
+#### 3. 회사는 이를 용인한다 (의도된 트레이드오프)
+
+이것은 회사의 의도적인 선택입니다. 대기업은 **생산성(Productivity)**보다 **내부 식별성(Internal Legibility)**을 우선시합니다.
+
+* **엔지니어의 부품화:** 회사는 엔지니어를 언제든 AI 관련 프로젝트 같은 '이달의 문제'로 즉시 투입할 수 있는 대체 가능한 자원(Fungible)으로 취급하길 원합니다.
+* **품질 포기:** 엔지니어를 이리저리 옮기면 장기적인 전문성은 파괴되고 소프트웨어 품질은 떨어지지만, 회사는 빠른 인력 재배치라는 이점을 얻기 위해 이를 감수합니다.
+
+* **순수 공학(Pure Engineering):** 독립된 프로젝트(예: 프로그래밍 언어 제작)를 하는 경우 나쁜 코드는 무능함의 증거입니다.
+* **불순한 공학(Impure Engineering):** 대기업 엔지니어는 '배관공'이나 '전기 기술자'에 가깝습니다. 이미 복잡하게 얽힌 남의 집(낯선 코드베이스)에 들어가 마감 기한 내에 문제를 해결해야 합니다.
+
