--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -5499,6 +5499,7 @@ B-Tree가 완벽한 것은 아닙니다.
 * **자동 균형:** 분할과 병합을 통해 검색 성능을 일정하게 유지.
 * **범용성:** HDD(순차 접근 선호)와 SSD(블록 접근) 모두에서 우수한 성능.
 
+
 ## 25.11.29
 
 ### [How good engineers write bad code at big companies](https://www.seangoedecke.com/bad-code-at-big-companies/)
@@ -5538,4 +5539,248 @@ B-Tree가 완벽한 것은 아닙니다.
 
 * **순수 공학(Pure Engineering):** 독립된 프로젝트(예: 프로그래밍 언어 제작)를 하는 경우 나쁜 코드는 무능함의 증거입니다.
 * **불순한 공학(Impure Engineering):** 대기업 엔지니어는 '배관공'이나 '전기 기술자'에 가깝습니다. 이미 복잡하게 얽힌 남의 집(낯선 코드베이스)에 들어가 마감 기한 내에 문제를 해결해야 합니다.
+
+## 25.12.01
+
+### [References for "The Future of Programming"](https://worrydream.com/dbx/)
+
+강연에서 많은 컴퓨터 역사의 대부가 언급된다.
+
+- **리처드 해밍(Richard Hamming, 1915–1998)**
+  - 해밍 코드(Hamming Code) 의 발명자
+  - 컴퓨터 과학과 통신 공학 역사에서 **"데이터의 신뢰성"**을 확립한 전설적인 수학자이자 컴퓨터 과학자입니다.
+  - 브렛 빅터의 글에서 "자신이 무엇을 하는지 안다고 생각하는 것이 가장 위험하다"라고 말한 바로 그 인물이며, 1968년 튜링상(컴퓨터 과학의 노벨상) 수상자입니다.
+
+- **ARPA(아르파)**는 **"Advanced Research Projects Agency"**의 약자로, 우리말로는 **미국 국방부 산하 '고등연구계획국'**이라고 부릅니다.
+  - [미국 국방고등연구계획국 - 나무위키](https://namu.wiki/w/%EB%AF%B8%EA%B5%AD%20%EA%B5%AD%EB%B0%A9%EA%B3%A0%EB%93%B1%EC%97%B0%EA%B5%AC%EA%B3%84%ED%9A%8D%EA%B5%AD)
+    - 미국 국방부에 소속된 미군 관련 기술 연구개발기관으로, 1957년 소련이 쏘아올린 스푸트니크 1호에 위기 의식을 체감한 드와이트 D. 아이젠하워 대통령의 주도로 1958년에 창설된 ARPA[2]에 뿌리를 두고 있다.
+  - [DARPA](https://en.wikipedia.org/wiki/DARPA)
+
+      Originally known as the Advanced Research Projects Agency (ARPA), the agency was created on February 7, 1958, by President Dwight D. Eisenhower in response to the Soviet launching of Sputnik 1 in 1957. By collaborating with academia, industry, and government partners, DARPA formulates and executes research and development projects to expand the frontiers of technology and science, often beyond immediate U.S. military requirements.[5] The name of the organization first changed from its founding name, ARPA, to DARPA, in March 1972, changing back to ARPA in February 1993, then reverted to DARPA in March 1996
+
+**Summarized By Gemini**
+
+브렛 빅터(Bret Victor)가 2013년 DBX 컨퍼런스에서 발표한 **"프로그래밍의 미래(The Future of Programming)"** 강연에 사용된 참고 자료와 인용문들을 정리한 글입니다. 이 글은 단순히 출처를 나열한 것이 아니라, 프로그래밍의 역사적 발전 과정과 그 이면에 깔린 철학, 그리고 현재 우리가 가진 '전문성'에 대한 경계심을 다루고 있습니다.
+
+#### **[내용 정리 및 번역] "프로그래밍의 미래" 참고자료**
+
+##### **1. 도입 (Introduction)**
+
+강연의 전반적인 메시지는 앨런 케이(Alan Kay)와 제리 서스먼(Gerry Sussman)의 사상에서 영감을 받았습니다. 핵심은 **"우리는 아직 컴퓨팅/프로그래밍이 무엇인지 제대로 모른다"**는 것입니다.
+
+##### **2. 코딩의 역사와 저항 (Reactions to SOAP and Fortran)**
+초창기 프로그래밍이 이진법(Binary)에서 어셈블리어(Assembly), 포트란(Fortran)으로 발전할 때, 당시 프로그래머들은 새로운 도구에 격렬히 저항했습니다.
+
+* **리처드 해밍(Richard Hamming)의 인용:**
+    > "처음에 어셈블러가 나왔을 때, 기존 프로그래머 중 약 1%만이 관심을 보였습니다. 그들은 **어셈블리를 쓰는 건 '나약한 녀석들이나 하는 짓(sissy stuff)'**이며, 진정한 프로그래머라면 기계 용량을 낭비하며 어셈블리를 쓰지 않는다고 생각했습니다."
+    > "포트란(FORTRAN)이 나왔을 때도 마찬가지였습니다. 프로그래머들은 그것이 불가능하거나, 비효율적이거나, 존경받는 프로그래머라면 쓰지 않을 것이라며 반대했습니다."
+
+* **폰 노이만(John von Neumann)의 반응:**
+    > 폰 노이만조차 1954년 포트란에 대해 듣고는 **"기계어 이상의 것이 왜 필요한가?"**라고 반문했습니다. 제자가 어셈블러를 만들자 "귀중한 과학 계산 장비를 사무적인 일(clerical work) 따위에 쓴다"며 화를 냈습니다.
+
+##### **3. 패러다임의 변화 (Evolution of Paradigms)**
+프로그래밍은 다음과 같은 방향으로 발전해 왔습니다.
+* **직접 조작 (Direct Manipulation):** 텍스트 코딩에서 그래픽을 통한 직접 조작으로의 변화 (예: 이반 서덜랜드의 스케치패드).
+* **절차에서 목표로 (Procedures -> Goals):** '어떻게' 할 것인가에서 '무엇을' 할 것인가로의 변화 (예: PLANNER, Prolog, 정규 표현식).
+* **텍스트 나열에서 공간적 표현으로 (Text -> Spatial):** 텍스트 덤프에서 공간적인 UI로의 변화 (예: 더그 엥겔바트의 NLS, 스몰토크).
+* **순차적 처리에서 동시성으로 (Sequential -> Concurrent):** 폰 노이만 병목 현상을 극복하기 위한 병렬 처리와 액터 모델(Actor model).
+
+##### **4. 결론: 우리는 아직 모른다 (Closing)**
+우리는 현재의 프로그래밍 방식이 정답이라고 생각해서는 안 됩니다.
+
+* **제리 서스먼(Gerry Sussman):**
+    > "우리는 유연한 기계와 유연한 프로그래밍을 고민해야 할 때, **타입 시스템(type system) 같은 사소한 디테일이나 만지작거리고(diddling) 있습니다.** 이 문제들을 해결하려면 현재의 사고방식을 버려야 합니다."
+
+* **리처드 해밍(Richard Hamming):**
+    > "**창의적인 사람으로서 가질 수 있는 가장 위험한 생각은 자신이 무엇을 하고 있는지 안다고 생각하는 것입니다.**"
+    > "과학에서는 자신이 무엇을 하는지 안다면, 그것을 하지 말아야 합니다. 공학에서는 자신이 무엇을 하는지 모른다면, 그것을 하지 말아야 합니다. 물론 순수한 상태의 두 가지 경우는 거의 없습니다."
+
+* **대니 힐리스(Danny Hillis):**
+    > "리처드 파인만과 저는 우리가 무엇을 하는지 정말로 몰랐습니다. 하지만 그 분야가 너무나 새로웠기에 다른 누구도 몰랐습니다. **진보를 이뤄낸 것은 바로 아마추어들이었습니다.**"
+
+##### **5. 왜 그 시절에 혁신이 일어났는가? (Why then?)**
+1960~70년대에 혁신적인 아이디어가 쏟아져 나온 이유는 세 가지로 요약됩니다.
+1.  **전(Pre) 패러다임 단계:** 토마스 쿤이 말한 것처럼, 어떤 규칙이 정립되기 전이라 연구자들이 '모든 것'을 시도해 볼 수 있었습니다.
+2.  **ARPA의 자금 지원 모델:** 당시 ARPA는 프로젝트가 아닌 **'사람'에게 조건 없이 거액을 지원**했습니다. 하지만 1973년 맨스필드 수정안 이후, 자금 지원은 '직접적인 군사적/상업적 응용'이 가능한 프로젝트로 제한되었고, 이는 장기적이고 탐구적인 기초 연구를 위축시켰습니다.
+3.  **약물:** (농담 반 진담 반으로) 당시 많은 이들이 LSD 등 환각제를 경험했습니다.
+
+##### **6. '모른다는 것'에 대한 해명 (Clarification)**
+브렛 빅터는 '무지(Ignorance)'를 옹호하는 것이 아님을 분명히 합니다.
+
+* **무지가 아닌 겸손:** 과거의 지식과 도구를 배우는 것은 필수적입니다. 하지만 그것을 **절대적인 '진리'가 아닌 '제안'이나 '힌트'로 받아들여야 합니다.**
+* **도구에 대한 경계:** 도구를 배우고 사용하되, 그것을 맹신하지 마십시오. 도구는 우리의 사고를 확장하기도 하지만 동시에 제한하기도 합니다.
+
+* **데이비드 헤스테네스(David Hestenes):**
+    > "우리가 사용하는 수학적 모델링 도구는 세계를 인식하는 능력을 확장하는 동시에 제한합니다."
+
+* **앨런 케이(Alan Kay)의 조언:**
+    > "지식을 습득하되, **'향기(perfume)'만 남기고 나머지는 잊어버리는 것이 요령입니다.** 지식은 때로 시끄러워서 당신 자신의 '뇌의 목소리'를 덮어버리기 때문입니다. 향기는 내면의 충동이 이끄는 목적지를 찾을 때 그 지식을 다시 찾아내도록 도와줍니다."
+
+---
+
+**Q. 해밍 코드**
+
+- [Hamming code](https://en.wikipedia.org/wiki/Hamming_code)
+
+> In computer science and telecommunications, Hamming codes are a family of linear error-correcting codes. Hamming codes can detect one-bit and two-bit errors, or correct one-bit errors without detection of uncorrected errors. By contrast, the simple parity code cannot correct errors, and can detect only an odd number of bits in error. Hamming codes are perfect codes, that is, they achieve the highest possible rate for codes with their block length and minimum distance of three.[1] Richard W. Hamming invented Hamming codes in 1950 as a way of automatically correcting errors introduced by punched card readers.
+
+해밍 코드(Hamming Code)의 핵심 원리는 **"데이터의 위치를 2진수로 표현하여 범인을 찾아내는 스무고개 게임"**과 같습니다.
+
+리처드 해밍의 천재성은 단순히 "오류가 있다"는 것을 아는 것(검출)을 넘어, **"몇 번째 비트가 틀렸는지"**를 알아내어 **스스로 고치는(정정)** 방법을 고안했다는 데 있습니다.
+
+가장 대표적인 **[7, 4] 해밍 코드**(4개의 데이터 비트를 보내기 위해 3개의 패리티 비트를 추가하여 총 7비트를 전송)를 기준으로 원리를 설명해 드립니다.
+
+#### 1. 기본 개념: 패리티 비트 (Parity Bit)
+
+* **약속:** "우리 데이터 안의 '1'의 개수를 무조건 **짝수(Even)**로 맞추자."
+* **예시:** 데이터가 `101`이면 '1'이 2개(짝수)입니다. 패리티 비트는 `0`이 됩니다. (총 `1010` -> 1이 2개 유지)
+* **문제:** 패리티 비트 하나만 있으면 "어딘가 틀렸다"는 알 수 있지만, "어디가 틀렸는지"는 모릅니다.
+
+#### 2. 해밍의 해법: "겹치는 그룹 만들기"
+
+해밍은 패리티 비트를 **여러 개** 사용하여, 각 비트가 **서로 다른 구역**을 감시하게 만들었습니다.
+
+##### ① 패리티 비트의 위치
+
+패리티 비트(P)는 **2의 제곱수 자리($1, 2, 4, 8...$)**에 위치합니다. 나머지는 데이터(D)가 채웁니다.
+* **1번 자리:** P1
+* **2번 자리:** P2
+* **3번 자리:** D1 (데이터)
+* **4번 자리:** P4
+* **5번 자리:** D2 (데이터)
+* **6번 자리:** D3 (데이터)
+* **7번 자리:** D4 (데이터)
+
+##### ② 감시 구역 (스무고개 원리)
+각 패리티 비트는 자신의 위치에 해당하는 2진수 비트가 '1'인 자리들만 감시합니다.
+
+* **P1 (001):** 2진수의 **첫 번째 자리**가 1인 위치들 감시
+    * 감시 대상: 1, 3, 5, 7, 9...
+* **P2 (010):** 2진수의 **두 번째 자리**가 1인 위치들 감시
+    * 감시 대상: 2, 3, 6, 7, 10...
+* **P4 (100):** 2진수의 **세 번째 자리**가 1인 위치들 감시
+    * 감시 대상: 4, 5, 6, 7, 12...
+
+#### 3. 실제 작동 예시 (Step-by-Step)
+
+우리가 보내고 싶은 데이터가 **`1011`**이라고 가정해 봅시다.
+
+##### [1단계] 비트 배치
+총 7자리를 만들고, 2의 제곱수 자리를 비워둡니다.
+`P1` `P2` **`1`** `P4` **`0`** **`1`** **`1`** (3, 5, 6, 7번 자리에 데이터 배치)
+
+##### [2단계] 패리티 계산 (짝수 패리티 기준)
+* **P1 값 구하기 (1, 3, 5, 7번 확인):**
+    * 3번(1), 5번(0), 7번(1) → 1이 2개(짝수)
+    * 짝수이므로 P1 = **`0`**
+* **P2 값 구하기 (2, 3, 6, 7번 확인):**
+    * 3번(1), 6번(1), 7번(1) → 1이 3개(홀수)
+    * 짝수로 만들어야 하므로 P2 = **`1`**
+* **P4 값 구하기 (4, 5, 6, 7번 확인):**
+    * 5번(0), 6번(1), 7번(1) → 1이 2개(짝수)
+    * 짝수이므로 P4 = **`0`**
+
+**완성된 코드:** `0` `1` **`1`** `0` **`0`** **`1`** **`1`**
+
+##### [3단계] 오류 발생 및 정정 (마법의 순간)
+
+전송 중에 5번 자리의 데이터 `0`이 **`1`**로 바뀌는 오류가 났다고 칩시다.
+수신된 코드: `0` `1` `1` `0` **`1`** `1` `1`
+
+컴퓨터는 다시 패리티 검사를 합니다.
+1.  **P1 검사 (1,3,5,7):** `0, 1, 1, 1` → 1이 3개(홀수). **에러! (값 1)**
+2.  **P2 검사 (2,3,6,7):** `1, 1, 1, 1` → 1이 4개(짝수). **정상. (값 0)**
+3.  **P4 검사 (4,5,6,7):** `0, 1, 1, 1` → 1이 3개(홀수). **에러! (값 4)**
+
+**범인 색출:**
+에러가 난 패리티 비트의 자리 값을 더합니다.
+* P1이 에러다 (1)
+* P4가 에러다 (4)
+* **1 + 4 = 5**
+
+**결론:** **"5번째 비트가 범인이다!"**
+컴퓨터는 5번째 비트를 반대로 뒤집어서(`1` → `0`) 스스로 수리합니다.
+
+---
+
+**Q. 해밍코드는 현대 네트워크에서 사용되는지?**
+
+- [Cyclic redundancy check](https://en.wikipedia.org/wiki/Cyclic_redundancy_check)
+
+> A cyclic redundancy check (CRC) is an error-detecting code commonly used in digital networks and storage devices to detect accidental changes to digital data. Blocks of data entering these systems get a short check value attached, based on the remainder of a polynomial division of their contents.
+
+> CRCs are based on the theory of cyclic error-correcting codes. The use of systematic cyclic codes, which encode messages by adding a fixed-length check value, for the purpose of error detection in communication networks, was first proposed by W. Wesley Peterson in 1961.[2] Cyclic codes are not only simple to implement but have the benefit of being particularly well suited for the detection of burst errors: contiguous sequences of erroneous data symbols in messages. This is important because burst errors are common transmission errors in many communication channels, including magnetic and optical storage devices. Typically an n-bit CRC applied to a data block of arbitrary length will detect any single error burst not longer than n bits, and the fraction of all longer error bursts that it will detect is approximately (1 − 2−n).
+
+> A CRC is called an n-bit CRC when its check value is n bits long. For a given n, multiple CRCs are possible, each with a different polynomial. Such a polynomial has highest degree n, which means it has n + 1 terms. In other words, the polynomial has a length of n + 1; its encoding requires n + 1 bits. Note that most polynomial specifications either drop the MSb or LSb, since they are always 1. The CRC and associated polynomial typically have a name of the form CRC-n-XXX as in the table below.
+
+> The simplest error-detection system, the parity bit, is in fact a 1-bit CRC: it uses the generator polynomial x + 1 (two terms),[3] and has the name CRC-1.
+
+결론부터 말씀드리면, **"아니요, 현대의 네트워크 통신(인터넷, 와이파이, 5G 등)에서는 해밍 코드가 거의 메인으로 사용되지 않습니다."**
+
+해밍 코드는 '오류 정정의 시조새'로서 역사적 가치는 엄청나지만, **현대 네트워크 환경에서 그대로 쓰기에는 치명적인 약점**들이 있기 때문입니다.
+
+#### 1. 왜 안 쓸까? (해밍 코드의 한계)
+
+**① "기관총은 못 막는다" (버스트 에러 취약)**
+* 해밍 코드는 기본적으로 **'1비트 오류'**를 고치는 데 특화되어 있습니다.
+* 하지만 실제 네트워크 환경(특히 무선 통신)에서는 잡음이나 신호 간섭이 발생하면 비트 하나가 툭 바뀌는 게 아니라, **연속된 데이터 뭉텅이가 와장창 깨지는 현상(Burst Error)**이 발생합니다.
+* 기관총처럼 연달아 터지는 오류 앞에서 해밍 코드는 무력합니다.
+
+**② "가성비가 나쁘다" (오버헤드 문제)**
+* 앞서 설명한 `[7, 4]` 해밍 코드를 보면, 고작 데이터 4개를 보내려고 패리티 3개를 더 붙입니다. (데이터 전송 효율이 57%밖에 안 됨)
+* 기가비트급 속도로 대용량 데이터를 보내야 하는 현대 네트워크에서 배보다 배꼽이 이렇게 큰 방식은 비효율적입니다.
+
+#### 2. 그럼 요즘은 뭘 쓸까? (현대의 대안들)
+
+현대 네트워크는 해밍 코드보다 훨씬 복잡하고 강력한 수학적 알고리즘을 사용합니다. 크게 두 가지 전략으로 나뉩니다.
+
+**① 유선 네트워크 (Ethernet, TCP/IP): "틀렸어? 다시 보내!"**
+* 광랜이나 LAN 선은 신호가 안정적이라 오류가 잘 안 납니다. 굳이 무겁게 '정정 코드'를 넣을 필요가 없습니다.
+* 대신 **CRC (Cyclic Redundancy Check)**라는 기술을 씁니다.
+    * 이건 오류를 **고치지는 못하고, 발견만 기가 막히게 잘합니다.**
+    * "야, 이거 데이터 깨져서 왔는데?"라고 감지하면, 상대방에게 **"다시 보내(Retransmission, ARQ)"**라고 요청하는 게 훨씬 싸고 빠릅니다.
+
+**② 무선/고속 네트워크 (Wi-Fi, 5G, LTE): "수학으로 복구한다"**
+* 무선은 잡음이 심해서 재전송만 하다가는 날 샙니다. 그래서 **강력한 오류 정정(FEC, Forward Error Correction)** 기술을 씁니다.
+* **LDPC 코드 (Low-Density Parity-Check):** 해밍 코드의 먼 후손 격으로, 5G와 최신 와이파이(Wi-Fi 6/7)의 핵심 기술입니다.
+* **터보 코드 (Turbo Code):** 3G, 4G LTE에서 주로 쓰였습니다.
+* **리드-솔로몬 부호 (Reed-Solomon):** CD, DVD, QR 코드, 그리고 우주 통신에서 '뭉텅이 오류(버스트 에러)'를 고치는 데 씁니다.
+
+#### 3. 해밍 코드는 멸종했나?
+
+아닙니다. 네트워크 '전송 선로'에서는 은퇴했지만, **컴퓨터 내부**에서는 여전히 현역입니다.
+
+* **ECC RAM (서버용 메모리):**
+    데이터 센터에 들어가는 서버용 램은 여전히 **해밍 코드(혹은 그 변형인 SEC-DED)**를 사용합니다. 램 내부에서는 버스트 에러보다 간헐적인 1비트 오류(우주선 등에 의한)가 주된 문제이기 때문에 해밍 코드가 가장 효율적입니다.
+
+
+---
+
+[Actor model](https://en.wikipedia.org/wiki/Actor_model)
+
+    The actor model in computer science is a mathematical model of concurrent computation that treats an actor as the basic building block of concurrent computation. In response to a message it receives, an actor can: make local decisions, create more actors, send more messages, and determine how to respond to the next message received. Actors may modify their own private state, but can only affect each other indirectly through messaging (removing the need for lock-based synchronization).
+
+    Its development was "motivated by the prospect of highly parallel computing machines consisting of dozens, hundreds, or even thousands of independent microprocessors, each with its own local memory and communications processor, communicating via a high-performance communications network."[2] Since that time, the advent of massive concurrency through multi-core and manycore computer architectures has revived interest in the actor model.
+
+액터 모델이 1973년에 처음 제안되었음에도 불구하고, 최근(2010년대 이후)에 와서야 주류로 떠오른 이유가 바로 **"하드웨어 성능의 발전"**과 **"자원의 여유"** 때문입니다.
+
+#### [추가 설명] 풍요로운 자원이 필수인 이유 (The Cost of Abstraction)
+
+액터 모델은 **"개발자가 편해지는 대신, 기계가 더 고생하는 방식"**입니다. 기계가 쌩쌩하지 않으면 이 방식을 쓰기 어렵습니다.
+
+##### 1. 메시지 패싱의 오버헤드 (직접 건네주기 vs 우편 부치기)
+* **전통적 방식 (공유 메모리):** 옆 사람(스레드)에게 데이터를 줄 때, 책상(메모리) 위에 툭 던져두고 "가져가"라고 하면 끝입니다. 속도가 빛의 속도입니다.
+* **액터 모델:** 데이터를 줄 때, 편지 봉투에 데이터를 복사해서 넣고(Copy), 우체통에 넣고(Queueing), 받는 사람이 꺼내 볼 때까지 기다려야 합니다(Scheduling).
+* **결론:** 데이터 복사와 큐 관리 때문에 **CPU 사이클과 메모리 대역폭을 훨씬 많이 소모**합니다. 과거의 느린 CPU와 비싼 메모리 환경에서는 사치스러운 기술이었습니다.
+
+##### 2. "문맥 교환(Context Switching)"의 비용
+수백만 개의 액터가 동시에 돌아가는 것처럼 보이지만, 실제로는 CPU 코어 몇 개가 이 액터 저 액터를 번갈아 가며 실행합니다.
+* 아무리 액터가 가볍다 해도, 이 작업을 관리하고 스케줄링하는 데 **컴퓨팅 자원**이 들어갑니다.
+* 하드웨어 성능이 뒷받침되지 않으면, 실제 일하는 시간보다 **"누구 일 시킬지 결정하는 시간"**이 더 길어지는 배보다 배꼽이 큰 상황이 발생합니다.
+
+##### 3. 하드웨어 발전이 가져온 패러다임 변화
+과거에는 "어떻게 하면 메모리 1바이트를 아낄까?"가 지상 과제였습니다. 하지만 지금은 상황이 다릅니다.
+
+* **RAM은 싸다:** "메모리 좀 낭비하면 어때? 복사본을 만들어서 안전하게 쓰자." (Immutable Message)
+* **CPU 코어는 많다:** "단일 속도는 한계에 왔으니, 남아도는 코어들을 활용해 병렬 처리를 극대화하자."
 
