--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -5784,3 +5784,41 @@ B-Tree가 완벽한 것은 아닙니다.
 * **RAM은 싸다:** "메모리 좀 낭비하면 어때? 복사본을 만들어서 안전하게 쓰자." (Immutable Message)
 * **CPU 코어는 많다:** "단일 속도는 한계에 왔으니, 남아도는 코어들을 활용해 병렬 처리를 극대화하자."
 
+## 25.12.03
+
+### [Why xor eax, eax — Matt Godbolt’s blog](https://xania.org/202512/01-xor-eax-eax)
+
+**Summarized By Gemini**
+
+제공해주신 글은 **x86 아키텍처에서 컴파일러가 레지스터를 0으로 초기화할 때 왜 `mov` 대신 `xor` 명령어를 사용하는지**에 대한 기술적인 분석글입니다.
+
+리눅스 시스템에서 가장 많이 실행되는 명령어 중 하나가 의외로 `xor`인 이유는 컴파일러가 **레지스터를 0으로 초기화할 때** 이 방식을 선호하기 때문입니다. 그 이유는 크게 두 가지입니다.
+
+**1. 코드 크기가 더 작다 (공간 효율성)**
+
+  * `mov eax, 0`은 **5바이트**를 차지하지만, `xor eax, eax`는 **2바이트**만 차지합니다.
+  * 자기 자신을 XOR 연산하면 결과는 무조건 0이 됩니다.
+  * 코드가 작아지면 명령어 캐시(Instruction Cache)를 더 효율적으로 사용할 수 있습니다.
+
+```assembly
+b8 00 00 00 00  mov eax, 0
+c3              ret
+```
+* 만약 GCC의 최적화 레벨을 `-O1`으로 낮추고 컴파일한 결과
+
+```assembly
+31 c0           xor eax, eax
+c3              ret
+```
+
+**2. 실행 속도가 더 빠르다 (성능 최적화)**
+
+  * CPU는 `xor reg, reg` 패턴을 **"0으로 만드는 관용구(zeroing idiom)"**로 인식합니다.
+  * CPU는 이 연산이 이전 값에 의존하지 않는다는 것을 알기 때문에, **의존성(dependency)**을 끊고 새로운 레지스터 리네이밍 슬롯을 할당합니다.
+  * 이 과정은 실행 대기열에서 아예 제거되어 처리되므로, 사실상 **0 사이클**에 실행됩니다(CPU 내부적으로 최적화됨).
+
+**추가적인 아키텍처 특징**
+
+  * **32비트 vs 64비트:** 64비트 레지스터(`rax`)를 초기화할 때도 `xor rax, rax` 대신 `xor eax, eax`를 사용합니다. x86-64 아키텍처에서는 **32비트 하위 레지스터(`eax`)에 값을 쓰면 상위 32비트가 자동으로 0으로 채워지기 때문**입니다.
+  * 이러한 최적화 덕분에 `xor`은 공간과 시간을 모두 절약하는 매우 효율적인 방법입니다.
+
