--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -5822,3 +5822,20 @@ c3              ret
   * **32비트 vs 64비트:** 64비트 레지스터(`rax`)를 초기화할 때도 `xor rax, rax` 대신 `xor eax, eax`를 사용합니다. x86-64 아키텍처에서는 **32비트 하위 레지스터(`eax`)에 값을 쓰면 상위 32비트가 자동으로 0으로 채워지기 때문**입니다.
   * 이러한 최적화 덕분에 `xor`은 공간과 시간을 모두 절약하는 매우 효율적인 방법입니다.
 
+---
+
+**Register In Assembly**
+
+* **A (Accumulator):** **AX** (연산 중심, 함수 리턴값 저장)
+* **B (Base):** **BX** (주소 지정의 베이스, 기초) → `EBX`, `RBX`
+* **C (Counter):** **CX** (반복문의 카운터) → `ECX`, `RCX`
+* **D (Data):** **DX** (데이터 저장, 연산 보조) → `EDX`, `RDX`
+
+* **AX**: **A**ccumulator Register (누산기 레지스터)
+    * 가장 기본이 되는 이름입니다. 산술 연산(더하기, 빼기 등)의 결과가 '누적(Accumulate)'되는 곳이라서 붙은 이름입니다. (16비트 시절)
+    * (연산 중심, 함수 리턴값 저장)
+* **EAX**: **E**xtended **AX** (**확장된** AX)
+    * 32비트 CPU(386 등)가 나오면서 기존 16비트 AX를 32비트로 **확장**했다는 뜻에서 'E'를 붙였습니다.
+* **RAX**: **R**egister **AX** (64비트 AX)
+    * 64비트 CPU(x86-64, AMD64)가 나오면서 붙은 접두사입니다. 여기서 'R'은 단순히 **Register**를 의미하는 것으로 통용되지만, 사실상 "64비트로 한 번 더 확장된 버전"을 가리키는 고유 접두사로 보시면 됩니다.
+
