--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -5839,3 +5839,79 @@ c3              ret
 * **RAX**: **R**egister **AX** (64비트 AX)
     * 64비트 CPU(x86-64, AMD64)가 나오면서 붙은 접두사입니다. 여기서 'R'은 단순히 **Register**를 의미하는 것으로 통용되지만, 사실상 "64비트로 한 번 더 확장된 버전"을 가리키는 고유 접두사로 보시면 됩니다.
 
+## 25.12.04
+
+### [A Series of Vignettes From My Childhood and Early Career](https://www.jasonscheirer.com/weblog/vignettes/)
+
+**Summarized By Gemini**
+
+제공해주신 글은 2025년 11월 27일에 작성된 것으로 설정된 에세이로, 소프트웨어 엔지니어링의 역사 속에서 반복되어 온 **'직업의 종말에 대한 잘못된 예언'**과 **'기술 거품(Hype)'**에 대한 일화들을 모은 것입니다. 현재의 LLM(거대언어모델) 열풍을 과거의 사례들에 빗대어 비판하는 내용을 담고 있습니다.
+
+1.  **소프트웨어 엔지니어링의 종말 (1996년):** 객체 지향 프로그래밍(OOP)이 나오면 비즈니스맨들이 레고처럼 코드를 조립할 것이므로 프로그래머는 사라질 것이라는 조언을 들었습니다. 하지만 30년이 지난 지금도 레고 조립은 여전히 어렵고, 추상화 레벨만 높아졌을 뿐 프로그래머는 여전히 필요합니다.
+2.  **멀티미디어 시대와 거품 (~1993년):** 모든 소프트웨어에 비디오와 사운드가 들어가야 한다는 '멀티미디어' 광풍이 불었지만, 결국 그것은 일상의 평범한 기술이 되었고 산업 붕괴는 일어나지 않았습니다.
+3.  **소프트웨어 엔지니어링의 종말: 또다시 (2000년):** 동료가 IntelliJ IDE의 자동 완성 및 리팩토링 기능을 보여주며 프로그래머가 필요 없어질 것이라 했지만, 도구는 생산성을 높여주었을 뿐 프로그래머를 대체하지 못했습니다.
+4.  **자동화 경험:** 작가는 스크립트를 짜서 타인의 업무를 자동화해주기도 하고, 자신의 업무를 몰래 자동화하기도 했습니다. 하지만 결과적으로 일자리는 사라지지 않았고, "일은 항상 더 있었다"는 깨달음을 얻습니다.
+5.  **데이터 윤리:** 과거 자연어 처리(NLP) 연구를 할 때는 저작권과 윤리를 철저히 지켰음을 회상하며, 무분별하게 데이터를 긁어모으는 현재의 풍토를 우회적으로 비판합니다.
+
+**결론:** 이 글은 현재 세상을 시끄럽게 하는 **LLM(거대언어모델) 과대광고 세력**을 향한 수동공격적인 비판입니다.
+
+---
+
+**직업으로서의 소프트웨어 엔지니어링의 죽음**
+
+내가 어렸을 때, 나는 프로그래밍을 정말 좋아했습니다! 성취감도 좋았고, 문제 해결 과정도 좋았으며, 내가 만든 것을 주변 사람들에게 공유해서 그들을 즐겁게 하거나 돕는 것도 좋았습니다.
+어느 날(1996년쯤), 한 현명한 어른이 나를 따로 불러 이렇게 말했습니다. "있잖니, 네가 프로그래밍을 즐긴다니 참 다행이구나. 왜냐하면 미래에는 이걸로 먹고살 수는 없을 테니까 말이다. 돈보다는 사랑으로 하는 게 좋은 생각이야."
+"코딩은 끝났어. 객체 지향(Object Oriented) 프로그래밍이 나오면, 우리보다 훨씬 똑똑한 한 사람이 라이브러리를 딱 한 번 개발할 거고, 우리는 영원히 그걸 쓰기만 하면 되거든. 한번 해결된 문제는 다시 풀 필요가 없지."
+"5년 안에 책장에 꽂힌 책처럼 객체 라이브러리가 생길 거야. 그러면 모든 소프트웨어 문제는 비즈니스맨들이 필요한 객체 라이브러리를 레고처럼 딱딱 끼워 맞추기만 하면 해결될 거다. 그들은 네가 전혀 필요 없을 거야."
+나는 이 조언에 대해, 그리고 내가 학교에 들어갈 때쯤이면 소프트웨어 엔지니어링이 끝나 있을 거라는 사실에 대해 생각해 보았습니다. 아직 내 진로에 대해 생각조차 안 해봤을 때였죠. 나는 중학생이었습니다. 하지만 프로그래밍이 끝이 아니라는 건 알았습니다.
+거의 30년이 지난 지금, 온갖 일에도 불구하고 소프트웨어는 여전히 내 생활비를 대주고 있습니다. 오픈 소스가 존재하고, 문제를 해결하기 위해 조립할 수 있는 라이브러리들도 있습니다. 하지만 일반적인 경로에서 벗어난 새로운 문제들은 항상 튀어나옵니다. 레고 블록을 끼워 맞추는 건 여전히 어려운 작업입니다. 우리가 한 단계의 추상화 레벨에서 문제를 해결할 때마다, 우리는 한 단계 더 높은 곳에서 작업하게 되고 세상은 계속 돌아갑니다.
+누군가 "이게 너희의 끝이야"라고 선언하며 즐거운 미래(일 안 해도 되는 미래)로 나를 위협할 때마다, 일어나는 일이라곤 내 직업이 좀 더 귀찮아지는 것뿐이었습니다. 아직 멸종이라는 달콤한 해방은 얻지 못했습니다.
+
+**컴퓨팅이 영원히 바뀌고 움직이지 않은 자들은 도태되었던 그 시절**
+
+1993년 즈음은 "멀티미디어 시대"의 도래기였습니다. 멀티미디어는 유행어였죠. 소프트웨어는 멀티미디어 준비가 되어 있어야 했습니다. 교육은 아이들이 멀티미디어 시대에 대비하도록 가르쳐야 했습니다. 당신의 도구가 아무리 부적절한 것이라도 멀티미디어 기능이 없으면 뒤처질 것이 뻔했습니다. 비디오 가이드가 필요했고, CD-ROM에 담겨 있어야 했습니다. 이것이 그냥 '뉴 노멀(새로운 표준)'이었습니다.
+"멀티미디어"는 단지 "소리와 영상"을 의미할 뿐입니다. 우리는 매우 직접적이고 수준 낮은 개념에 대해 수준 높은 용어를 붙였던 겁니다.
+그리고 멀티미디어 붐은 시들해졌습니다. 지루해졌죠. 웹사이트에 영상이 있다고 감동하는 사람은 없고, 적절하지 않아서 소리와 영상을 쓰지 않은 웹사이트를 폄하하는 사람도 없습니다. HTML에 `<video />` 태그 하나 넣으면 작업 끝입니다. 놀라웠던 것은 평범한 것이 되었습니다. "멀티미디어"의 꿈은 일상이 되었고 모두가 그것을 정상으로 받아들였습니다. 멀티미디어 때문에 극적으로 붕괴한 산업은 제가 알기로 없습니다. 아무도 실제로 재교육을 받지 않았습니다. 비디오 편집은 여전히 꽤 찾기 힘든 기술이고, 우리는 소프트웨어 제품의 오디오 UX 작업을 위해 음향 엔지니어를 고용하지도 않습니다.
+
+**직업으로서의 소프트웨어 엔지니어링의 죽음: 또다시**
+
+2000년에 한 동료가 나를 따로 불러 자신의 새로운 IntelliJ IDE(통합 개발 환경) 카피를 보여주었습니다. "우린 이제 끝났어." 그가 말했습니다. "이 물건이 프로그래머를 굳이 필요 없게 만들 거야. 한 사람이 이 도구를 다루면 나머지 우리들은 해고할 수 있겠지."
+나는 꽤 경외감을 느꼈습니다. IDE 안에서 놀라운 자동 완성이 바로 되었으니까요. 옆에 별도의 JavaDocs 창을 띄울 필요도 없었고, 문서가 필요한 클래스 페이지를 수동으로 열 필요도 없이 그냥 그 자리에 인라인으로 떴습니다. 빌드할 때까지는 보통 볼 수 없는 문제들에 대해 컴파일 주기 전에 피드백을 주기도 했습니다. 그것은 훌륭한 예방 작업이었고 개발자가 작업 흐름(flow)을 더 오래 유지할 수 있게 해 줄 잠재력이 있어 보였습니다.
+그러고 나서 그는 "우리의 일자리를 뺏을" 킬러 기능을 보여주었습니다. 바로 리팩토링 도구였습니다.
+그는 도구를 보여주며 코드를 새 파일로 쉽게 옮기고, 코드베이스 전체에서 클래스 이름을 바꾸는 등 사람이 혼자 하면 며칠이 걸릴 온갖 수동 작업들을 수행했습니다. 마법 같았습니다.
+곰곰이 생각한 끝에 내가 말했습니다. "놀랍네. 근데 이게 새로운 로직도 짜주나? 아니면 그냥 코드만 옮겨주는 건가?"
+그는 당황하지 않고 이 강력한 도구들이 우리의 파멸이라는 주장을 굽히지 않았습니다. 나는 "유용한" 코드와 "채우기용" 코드를 구별했지만, 보아하니 가치 있는 것은 코드의 품질과 본질이 아니라 그 양과 존재감이었나 봅니다. 이 도구는 확실히 인간이 작성한 작은 알맹이들에 양과 존재감을 모두 부여해 주었으니까요.
+
+**내가 누군가를 자동화로 실직시켰던(것 같았던) 때**
+
+고등학교 때 첫 직장에서 나는 교외의 오피스 단지 사무실에서 여러 지역 에이전시 출신의 프로그래머들과 일했습니다. 내가 말을 튼 한 사람은 계약직이었는데, 이 사람들은 높은 대우를 받고 다소 두려움의 대상이 되는 전문가들이었습니다. 그 사람은 카운티의 어떤 보건 컴퓨터 시스템을 MUMPS(과거 의료용 언어)에서 더 현대적인 관계형 시스템으로 마이그레이션(이전)하는 다년 계약 프로젝트를 수행 중이었습니다. 그는 자신이 이걸 해결하는 게 얼마나 똑똑한 일인지 자랑하기 위해 그가 풀고 있는 주요 문제들을 보여주었습니다. 그것들은 대부분 테이블 스키마와 레코드를 꽤 일정한 방식으로 이전하는 기계적인 문제들이었습니다. 하지만 양이 많았고, 그는 마감일을 맞추기 위해 열심히 일하고 있었죠!
+나는 생각했고, 그의 인정과 칭찬을 바라고 그를 돕기 시작했습니다. 내가 뭘 할 수 있는지 보여주려고요. 나는 85%의 케이스(대부분 문자열 조작이었습니다)를 해결할 수 있는 파이썬 스크립트를 짰고, 심지어 그가 시각적으로 이전할 파일을 선택할 수 있도록 작은 TkInter 대화 상자까지 붙였습니다. 아주 잘 돌아갔지만, 내가 그에게 시연했을 때 그는 조금 겁먹은 표정이었습니다.
+"이거 다른 사람한테 안 보여줬지?"
+"네."
+"아, 신이시여 감사합니다."
+나는 그가 남은 6개월의 계약 기간 동안 농땡이를 피울 자유 시간을 얻기 위해 내 도구를 사용했을 거라 생각합니다. 그가 다른 누구에게도 그 도구에 대해 말하지 않았을 거라고 생각하지만, 며칠 만에 끝낼 수 있는 일을 가지고 훨씬 더 많은 MUMPS 마이그레이션 계약을 따냈을 거라고 짐작해 봅니다.
+
+**내가 내 일자리를 자동화로 없앴던 때**
+
+같은 직장에서, 나는 일련의 정부 기관 웹사이트를 유지 관리하는 대가를 받고 있었습니다. 내 주요 업무 중 하나는 정신 건강 제공자 목록을 HTML 페이지에서 최신 상태로 유지하고 서버에 업로드하는 것이었습니다.
+이 과정은 꽤 기계적이었습니다. 받은 편지함에서 엑셀 시트를 가져와 엑셀에서 열고, 엑셀 표를 HTML 표로 복사하는 것이었죠.
+한 달 안에 나는 완전히 자동화된 워크플로를 갖췄습니다.
+
+1.  Windows Automation을 사용하여 내 아웃룩 수신함을 감시합니다.
+2.  엑셀을 보내주는 담당자에게서 이메일이 오면 다운로드합니다.
+3.  Windows Automation을 사용하여 엑셀 파일을 엽니다.
+4.  엑셀에서 CSV로 내보냅니다. (자동화가 이 작업을 수행했고, 나는 그저 유령이 엑셀 창을 열고 닫으며 원격 조종하는 것을 지켜보았습니다.)
+5.  그 CSV 데이터를 HTML 표로 파일에 주입하는 파이썬 스크립트를 실행합니다.
+6.  FTP 서버에 접속하여 파일을 업로드하는 또 다른 파이썬 스크립트를 실행합니다. 이 스크립트는 무작위로 멈추거나 오타를 내서 마치 인간이 키보드로 FTP 세션을 운영하는 것처럼 보이게 했기에 아무도 내 계략을 의심하지 않았습니다.
+
+나는 들킬까 봐 두려움에 떨었고, 돈을 받고 해야 할 일을 더 이상 내가 하고 있지 않다는 사실을 아무에게도 말하지 않았습니다.
+약 9개월 후, 해당 부서는 웹사이트를 자체적으로 운영하기 위해 연봉 4만 5천 달러에 풀타임 웹 개발자를 고용했습니다. 내 비용은 시간당 25달러 정도였고, 아웃소싱 비용으로 따지면 연간 2,000달러도 안 되었을 겁니다. 이건 분명 돈 문제는 아니었습니다.
+그리고 내가 두려워했던 일은 일어나지 않았습니다. 나를 지탱해주던 그 업무가 없어지자, 매니저들은 그저 나에게 다른 일을 맡겼습니다.
+일은 언제나 더 있습니다.
+
+**컴퓨팅이 영원히 바뀌고 움직이지 않은 자들은 도태되었던 그 시절: 또다시**
+
+닷컴 붐은 미친 시대였습니다. 인터넷이 막 주류가 되었고 새로운 골드러시가 있었습니다. 돈은 줍는 사람이 임자였고, 수많은 벤처 캐피털(VC)의 투자를 받은 사업 계획은 그저 "전통적인 사업 X, 하지만 인터넷에서!"였는데도 돈이 흘러들어왔습니다. 엄청나게 흘러들어왔죠.
+하지만 이들 기업 대부분은 서버 몇 대와 도메인 이름을 사고 "이걸 인터넷에 올리자"는 것 외에는 확실한 비즈니스 모델이 없었습니다.
+이 붕괴 속에서 새싹이 돋아났습니다. 웹을 네이티브로, 유기적으로 사용하여 훌륭한 웹 네이티브 경험을 제공하는 웹 2.0이었습니다. 결국 많은 사람들이 정말 불필요하고 고통스러운 교훈을 얻은 후에야 인터넷의 꿈, 그 과장 광고의 약속이 현실화되었습니다. 그들은 더 적은 비용을 썼고, 인터넷이 '다음 대세(Next Big Thing)'라서가 아니라 현재의 인터넷에서 타당했기 때문에 인터넷에 자신들의 것을 올렸습니다.
+널리 퍼진, 어디에나 있는 인터넷의 꿈은 실현되었고 사상자는 거의 없었습니다. 일부 기업은 죽었지만, 시간 척도로 보면 화산 폭발보다는 빙하의 움직임처럼 느리게 일어났습니다. 어디서나 쓸 수 있는 온라인 서비스가 보편화되자 그것은 그저 평범하게 느껴졌습니다. 억지스럽지 않았습니다. 그것은 불과 5년 전의 닷컴 붐과는 정반대였습니다. "인터넷이 오고 있으니 어떻게든 이 건실한 사업을 인터넷에 올려야 해"가 아니라, "인터넷이 여기 있으니, 우리는 그 안에서 건실한 사업을 구축하러 왔다"는 것이었습니다.
