--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -5915,3 +5915,30 @@ c3              ret
 하지만 이들 기업 대부분은 서버 몇 대와 도메인 이름을 사고 "이걸 인터넷에 올리자"는 것 외에는 확실한 비즈니스 모델이 없었습니다.
 이 붕괴 속에서 새싹이 돋아났습니다. 웹을 네이티브로, 유기적으로 사용하여 훌륭한 웹 네이티브 경험을 제공하는 웹 2.0이었습니다. 결국 많은 사람들이 정말 불필요하고 고통스러운 교훈을 얻은 후에야 인터넷의 꿈, 그 과장 광고의 약속이 현실화되었습니다. 그들은 더 적은 비용을 썼고, 인터넷이 '다음 대세(Next Big Thing)'라서가 아니라 현재의 인터넷에서 타당했기 때문에 인터넷에 자신들의 것을 올렸습니다.
 널리 퍼진, 어디에나 있는 인터넷의 꿈은 실현되었고 사상자는 거의 없었습니다. 일부 기업은 죽었지만, 시간 척도로 보면 화산 폭발보다는 빙하의 움직임처럼 느리게 일어났습니다. 어디서나 쓸 수 있는 온라인 서비스가 보편화되자 그것은 그저 평범하게 느껴졌습니다. 억지스럽지 않았습니다. 그것은 불과 5년 전의 닷컴 붐과는 정반대였습니다. "인터넷이 오고 있으니 어떻게든 이 건실한 사업을 인터넷에 올려야 해"가 아니라, "인터넷이 여기 있으니, 우리는 그 안에서 건실한 사업을 구축하러 왔다"는 것이었습니다.
+
+## 25.12.06
+
+### [AI를 핑계로 정리해고하는 기업들 (숨겨진 진실)](https://www.youtube.com/shorts/3omYrfA25qE)
+
+이 영상은 테크 기업들이 최근 대규모 정리해고를 진행하는 진짜 이유에 대해 분석하며, AI가 경영 실패를 감추기 위한 '핑계'로 사용되고 있다는 관점을 제시합니다.
+
+* **정리해고의 진짜 원인**: 팬데믹 기간 동안 테크 기업들이 과도한 장미빛 전망으로 인력을 지나치게 많이 채용했기 때문입니다. 성장세가 꺾이자 이 과잉 인력을 조정하는 과정입니다.
+* **AI라는 '방패'**: 기업들은 "경영 실패로 인한 감원"이라고 인정하는 대신, "AI 중심의 미래로 전환"한다고 포장합니다. 이렇게 하면 CEO는 무능한 경영자가 아닌, 미래를 대비하는 비전 있는 리더로 보일 수 있기 때문입니다.
+* **AI 대체론의 허와 실**:
+    * MIT 연구에 따르면 AI에 투자한 기업의 95%는 아직 제대로 된 수익을 내지 못하고 있습니다.
+    * 미국 연준 조사 결과, AI 때문에 직원을 해고했다고 답한 서비스 기업은 1%에 불과했습니다.
+    * 클라르나(Klarna) CEO는 AI가 700명의 일을 대신한다고 했지만, 실제로는 해고가 아닌 채용 동결로 인한 자연 감소였다고 말을 바꾼 사례가 있습니다.
+
+- [Companies didn’t fire people because of AI. AI has too many flaws. They did it to fix overhiring and calm Wall Street. : r/cscareerquestions](https://www.reddit.com/r/cscareerquestions/comments/1ojz15y/companies_didnt_fire_people_because_of_ai_ai_has/)
+- [Companies Are Blaming AI for Layoffs. The Real Reason Will Piss You Off. | by Jari Mattlar | Oct, 2025 | Medium](https://medium.com/@mattlar.jari/companies-are-blaming-ai-for-layoffs-the-real-reason-will-piss-you-off-149639ce47cf)
+- [IBM CEO Arvind Krishna reveals key reason behind tech industry layoffs and it's not what you think](https://economictimes.indiatimes.com/news/new-updates/ibm-ceo-arvind-krishna-reveals-key-reason-behind-tech-industry-layoffs-and-its-not-what-you-think/articleshow/125733797.cms)
+
+* MIT 연구: AI에 투자한 기업의 95%가 수익(ROI) 창출에 실패했습니다. 수익도 못 내는 도구 때문에 직원을 자른다는 것은 논리에 맞지 않습니다.
+* 뉴욕 연방준비은행 데이터: 지난 6개월간 실제로 AI 때문에 해고를 단행한 서비스 기업은 단 **1%**에 불과합니다.
+
+    AI가 주된 원인이 아니다: 크리슈나 CEO는 현재 테크 업계 전반에서 벌어지는 해고 사태가 주로 인공지능(AI) 기술 때문이라는 세간의 주장을 일축했습니다.
+
+    진짜 원인은 '팬데믹 기간의 과잉 채용': 그는 현재의 해고 사태가 팬데믹 기간 동안 기업들이 인력을 지나치게 많이 채용(over-hiring)했던 것에 기인한다고 분석했습니다.
+
+    자연스러운 조정(Natural Correction): 그는 지금의 현상을 당시의 과도한 확장에 대한 "자연스러운 조정" 과정이라고 불렀습니다.
+
