--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -5942,3 +5942,195 @@ c3              ret
 
     자연스러운 조정(Natural Correction): 그는 지금의 현상을 당시의 과도한 확장에 대한 "자연스러운 조정" 과정이라고 불렀습니다.
 
+* Salesforce: CEO는 AI가 업무의 50%를 할 수 있다며 4,000명을 감원한다고 했지만, 대변인은 나중에 "직원들을 다른 부서로 재배치한 것"이라며 말을 바꿨습니다.
+* Klarna: 인력 40%를 감축하며 AI 효율성을 자랑했으나, CEO는 나중에 "AI 때문에 해고한 사람은 0명"이며 자연 감소와 채용 동결 때문이라고 시인했습니다.
+* IBM & Klarna: AI가 복잡한 고객 응대 처리에 실패하자 다시 사람을 뽑거나 계획을 철회하기도 했습니다.
+
+### [Precision Matters in C#: Correctly Handling Money, Time Zones, and Date Ranges](https://developersvoice.com/blog/csharp/precision-handling-money-time-ranges/)
+
+    The root cause is predictable: developers rely on primitive types like double and DateTime because they are easy to work with. They’re familiar, they compile, and they often appear to “work fine” during early testing. But these primitives do not model financial or temporal concepts accurately. When dealing with cents, tax percentages, billing cycles, or UTC instants, convenience becomes a source of long-term risk.
+
+* 화폐 단위를 다룰 때 참고해볼 코드 (.NET)
+- [GitHub - RemyDuijkeren/NodaMoney: NodaMoney provides a library that treats Money as a first class citizen and handles all the ugly bits like currencies and formatting.](https://github.com/RemyDuijkeren/NodaMoney)
+- [GitHub - dgg/nmoneys: .Net implementation of Money Value Object](https://github.com/dgg/nmoneys)
+
+**Summarized By Gemini**
+
+이 글은 엔터프라이즈 C# 환경에서 돈(Money), 시간(Time), 그리고 기간(Range)을 다룰 때 발생하는 정밀도 문제를 해결하기 위해, 기본 타입(Primitive Types) 대신 **도메인 주도 설계(DDD)에 기반한 의미론적 타입(Semantic Types)**을 사용해야 한다는 내용을 담고 있습니다.
+
+#### 1. 정밀도 부족의 숨겨진 비용 (The Hidden Cost of Imprecision)
+
+`double`이나 `DateTime` 같은 기본 타입은 편리하지만 금융이나 시간 계산에 있어서는 위험합니다.
+
+* **`double`의 문제:** 이진 부동소수점 방식이므로 `0.1`이나 `10.99` 같은 십진수를 정확히 표현하지 못해 미세한 오차가 발생합니다.
+* **`DateTime`의 문제:** `Kind` 속성(Local, Utc, Unspecified)의 모호함으로 인해 시간대 변환 시 버그가 발생하기 쉽습니다.
+* **해결책:** 데이터 타입(Data Types)이 아닌 의도와 규칙을 포함하는 의미론적 타입(Semantic Types)으로 전환해야 합니다.
+
+#### 2. 금융 정밀도: Decimal 그 이상 (Financial Precision)
+
+단순히 `decimal` 타입을 쓰는 것만으로는 부족합니다. 통화(Currency), 반올림 규칙 등을 포함하는 `Money` 값 객체(Value Object)가 필요합니다.
+
+* **`Money` 객체 설계:**
+    * `readonly record struct`로 구현하여 불변성(Immutability) 보장.
+    * 서로 다른 통화 간의 연산(예: USD + EUR)을 막는 로직 포함.
+    * **ISO 4217** 통화 코드 및 소수점 자릿수(Scale) 규칙 준수.
+* **나눗셈과 할당(Allocation):**
+    * 금액을 나눌 때(예: 100원을 3명이 나눔) 1센트가 남거나 사라지는 문제를 해결하기 위해, 나머지를 공평하게 분배하는 알고리즘을 사용해야 합니다.
+
+#### 3. 시간의 진실: .NET의 현대적 날짜와 시간 (Temporal Truths)
+
+* **`DateTimeOffset` 사용:** 절대적인 시점(Instant)을 표현할 때는 오프셋 정보가 포함된 `DateTimeOffset`을 사용해야 합니다. `DateTime.Kind`의 모호함을 제거합니다.
+* **의미론적 타입 (.NET 6+):**
+    * `DateOnly`: 생일, 기념일 등 시간대가 필요 없는 날짜.
+    * `TimeOnly`: 영업 시간 등 날짜와 무관한 시간.
+* **테스트 용이성 (.NET 8+):**
+    * `TimeProvider` 추상화를 사용하여 시스템 시계(`DateTime.Now`)에 직접 의존하지 않고, 테스트 시 결정론적(Deterministic)으로 시간을 제어(Mocking)해야 합니다.
+
+#### 4. 시간대와 DST 정복 (Mastering Time Zones & DST(Daylight Saving Time))
+
+* **표준:** Windows ID(예: "Pacific Standard Time") 대신 크로스 플랫폼 호환성이 좋은 **IANA ID(예: "America/Los_Angeles")**를 사용하십시오.
+* **DST(일광 절약 시간제 / 썸머타임)의 악몽:**
+    * 시간이 뒤로 갈 때(가을): 같은 시간이 두 번 반복되는 **모호한 시간(Ambiguous Time)** 발생.
+    * 시간이 앞으로 갈 때(봄): 존재하지 않는 **유효하지 않은 시간(Invalid Time)** 발생.
+    * 이러한 케이스를 명시적으로 처리해야 하며, 이를 위해 **NodaTime** 라이브러리 사용을 강력 권장합니다.
+
+#### 5. 기간의 로직: 범위 처리 (Handling Spans of Time)
+
+시작과 끝이 있는 기간(Range)을 다룰 때 'Off-by-one'(1 차이로 인한 오류) 버그가 흔합니다.
+
+* **반열린 구간 (Half-Open Interval) 패턴:** `[Start, End)`
+    * **시작은 포함(Inclusive), 끝은 제외(Exclusive)**하는 방식이 표준입니다.
+    * 예: 1월 1일 ~ 2월 1일, 2월 1일 ~ 3월 1일 (빈틈없이 이어짐).
+* **`DateRange` 값 객체:**
+    * `Start <= End` 불변식 강제.
+    * **Allen의 구간 대수(Interval Algebra)** 구현: 포함(Contains), 겹침(Overlaps), 인접(Abuts), 교집합(Intersect), 합집합(Union) 등의 메서드를 제공하여 로직을 캡슐화해야 합니다.
+
+#### 6. 지속성 및 직렬화 (Persistence and Serialization)
+
+* **EF Core (8/9):** `OwnsOne` 대신 **Complex Types**를 사용하여 값 객체를 깔끔하게 매핑하십시오.
+* **SQL Server:**
+    * `datetime2`: 날짜만 있거나 로컬 시간일 때.
+    * **`datetimeoffset(7)`**: 절대적인 시점(Instant)을 저장할 때 필수.
+    * 시간대 ID는 별도 컬럼에 저장하십시오.
+* **JSON 직렬화:**
+    * `System.Text.Json`의 커스텀 컨버터를 작성하여 `Money`나 `DateRange`가 의미 있는 구조로 직렬화되도록 하십시오.
+    * 날짜는 **ISO 8601** 형식을 준수하십시오.
+
+---
+
+**Q. decimal 타입의 함정에 대해서, 0.0 과 0.0000 이 의미상으로는 동일해도 다르게 인식하는 사례가 있었어서**
+
+네, 정확히 보셨습니다. 말씀하신 사례는 C# `decimal` 타입의 **"Scale(소수점 자릿수 정보)"** 때문에 발생하는 매우 유명한 함정입니다.
+
+수학적으로 `0.0`과 `0.0000`은 같지만, **`decimal`의 내부 비트 구조(Binary Representation)에서는 완전히 다른 값**으로 저장되기 때문에 발생하는 문제입니다.
+
+#### 1. 원인: Decimal은 "값"뿐만 아니라 "형식"도 저장한다
+
+C#의 `decimal` (128-bit) 구조는 크게 세 부분으로 나뉩니다.
+
+1.  **가수 (Mantissa):** 실제 숫자 데이터 (96-bit 정수)
+2.  **부호 (Sign):** 양수/음수
+3.  **스케일 (Scale):** 10의 몇 승으로 나눌 것인가 (0 ~ 28)
+
+이 **Scale** 때문에 다음 두 변수는 메모리에 다르게 저장됩니다.
+
+```csharp
+decimal a = 0.0m;    // Mantissa: 0, Scale: 1
+decimal b = 0.0000m; // Mantissa: 0, Scale: 4
+
+// 1. 수학적 비교 (성공)
+Console.WriteLine(a == b); // True (연산자 오버로딩에 의해 값은 같다고 판단)
+
+// 2. 문자열 변환 (실패 - 다르게 인식됨)
+Console.WriteLine(a.ToString()); // "0.0"
+Console.WriteLine(b.ToString()); // "0.0000"
+
+// 3. 비트 구조 비교 (실패 - 완전히 다른 데이터)
+int[] bitsA = decimal.GetBits(a);
+int[] bitsB = decimal.GetBits(b);
+// bitsA와 bitsB는 다릅니다. (Scale 비트가 다름)
+```
+
+#### 2. 해결책: 정규화(Normalization)
+
+이전 글에서 언급한 `Money` 같은 값 객체(Value Object)를 사용해야 하는 또 다른 강력한 이유입니다. `decimal`을 그대로 쓰지 말고, **항상 특정 Scale로 통일(정규화)하는 로직**을 거쳐야 합니다.
+
+##### 방법 1: `Money` 생성자에서 강제하기 (권장)
+
+```csharp
+public decimal Normalize(decimal value)
+{
+    // 입력이 0.0이든 0.0000이든 강제로 소수점 2자리로 맞춤 (나눗셈 활용)
+    // 1.00m을 곱하면 스케일이 2로 고정되는 효과를 이용 (단, 오버플로우 주의)
+    return value / 1.0000000000000000000000000000m; // 트릭에 가깝습니다.
+}
+
+// 더 정석적인 방법: Math.Round로 스케일 재조정
+public decimal Normalize(decimal value, int scale)
+{
+    // 소수점 자리수를 강제로 맞춤 (예: 2자리)
+    return Math.Round(value, scale, MidpointRounding.ToEven);
+}
+```
+
+  * `Math.Round`를 사용하면 `0.0m` -> `0.00m`, `0.0000m` -> `0.00m`으로 통일됩니다. (단, Round는 Scale을 줄일 수는 있어도 늘리지는 못하는 경우가 있어 포맷팅 시 주의 필요)
+
+### [Disrupting yourself in the age of AI - Stack Overflow](https://stackoverflow.blog/2025/12/02/disrupting-yourself-in-the-age-of-ai/)
+
+    The rise of Generative AI has dramatically redefined the information ecosystem, and with it, the very nature of success. When a user can get an instant, synthesized answer from an AI chatbot, the old quest for web traffic becomes a fool's errand. We see it in the declining use of traditional search and the increasing reliance on AI overviews. The question is no longer "How do we get more people to our site?" but rather…
+
+    "What is the new measure of value in an AI-driven world?"
+
+    The new success metrics aren't about eyeballs or clicks; they're about reach, trust, attribution, and influence.
+
+    In the post GenAI era, a new set of Internet business models emerged: in this new Internet era, businesses that understand that human knowledge and its creation, curation, and validation are as valuable (or more so) than the awareness or engagement of users themselves. We can't measure the success of a modern knowledge platform by the digital equivalent of foot traffic in a mall, or the number of newspapers delivered to a driveway
+
+    ...
+
+    Stack Internal. Introduced originally in 2018 as Stack Overflow for Teams, Stack Internal acts as an enterprise knowledge layer, ingesting, validating, and delivering organizational knowledge directly within the tools developers and technologists use everyday with the powerful duo of AI and human-validated content, while ensuring that teams can stay focused on accelerating innovation and avoid cognitive overload. With powerful new features such as Knowledge Ingestion that draws high value content from the tools enterprise tools developers use every day and transforms it into a structured format, and our bidirectional MCP Server that uses AI agents to pull from and contribute to an enterprise knowledge base, Stack Internal counts over 20,000 customers across the financial services, technology, retail, and telecommunications sectors. 
+
+    ...
+
+    Meeting that moment also means attracting and serving the right audience - the goal is no longer racing to attract the most online traffic. When it comes to customer fit, AI helps us move beyond simply acquiring customers to identifying and attracting those who will truly thrive with our products or services, leading to significantly better retention. This is why at Stack Overflow we are so heavily focused on working directly with our public platform users and enterprise customers to develop features that actually benefit them and their day to day needs.
+
+
+**StackOverflow 매출:**
+
+- AI 열풍 이후 신규 질문이 70% 감소하고 트래픽이 줄어든 것은 사실이나 매출은 늘었다.
+  - 비즈니스 전략이 변경. 조직의 지적 자산을 다루는 기업용 서비스를 제공(Knowledge as a service)
+  - 2021 년 prosus 에 인수. (18억 달러) 이후 2023년 조직 총 인력의 30% 구조조정이 있었음.
+- Stack Overflow's total revenue reached approximately $89 million in 2022.
+- By 2024, the company's annual recurring revenue (ARR) reportedly exceeded $125 million, with its SaaS product (Stack Overflow for Teams) accounting for 60% of this figure.
+
+**Summarized By Gemini**
+
+이 글은 스택 오버플로우(Stack Overflow)의 CEO인 Prashanth Chandrasekar가 작성한 것으로, **"AI 시대에 성공의 척도가 어떻게 변화하고 있는지, 그리고 기업이 이에 맞춰 어떻게 스스로를 혁신해야 하는지"**에 대한 통찰과 스택 오버플로우의 전략 변화를 다루고 있습니다.
+
+#### **1. 인터넷의 패러다임 변화와 새로운 성공 지표**
+
+* **과거의 공식:** 웹 트래픽(방문자 수, 클릭 수)이 성공의 유일한 척도였습니다. 정보가 희소하던 시절에는 많은 방문자를 모으는 것이 승리 공식이었습니다.
+* **현재의 변화:** 생성형 AI(GenAI)의 등장으로 사용자는 검색이나 클릭 없이 AI 챗봇에게 즉답을 얻습니다. 따라서 단순한 웹 트래픽은 더 이상 유효한 지표가 아닙니다.
+* **새로운 성공 지표:** 이제는 **도달(Reach), 신뢰(Trust), 출처 표기(Attribution), 영향력(Influence)**이 핵심입니다.
+    * 얼마나 많은 사람이 내 사이트에 오느냐가 아니라, **내 데이터가 AI 모델을 얼마나 똑똑하게 만들고, 사용자의 워크플로우 안에서 얼마나 유용하게 쓰이느냐**가 중요해졌습니다.
+
+#### **2. 새로운 비즈니스 모델: 지식 서비스 (Knowledge as a Service)**
+
+* **KaaS (Knowledge as a Service):** 단순히 정보를 호스팅하는 것을 넘어, 구조화되고 검증된 데이터를 제공하여 AI 도구를 지원하는 것입니다.
+* **API 파트너십:** 주요 AI 연구소 및 기업들과의 협력을 통해 AI 모델의 정확도를 높이는 데 기여하는 것이 성공의 척도입니다. (예: 스택 오버플로우 데이터로 AI 모델 성능을 30~70% 향상)
+* **인간 검증 레이어 (Human-Validated Layer):** AI의 환각(Hallucination) 문제를 해결하기 위해, 신뢰할 수 있는 인간 검증 지식을 제공하는 것이 필수적입니다.
+
+#### **3. 스택 오버플로우의 자기 혁신 사례**
+
+스택 오버플로우는 지난 3년 동안 스스로를 파괴하고 혁신하며 다음과 같은 변화를 추진했습니다.
+
+* **Stack Internal (기업용 지식 관리):** 기업 내부의 지식을 AI와 인간 검증을 통해 관리하고 제공하는 서비스로 진화했습니다. (20,000개 이상의 고객사 확보)
+* **Data Licensing (데이터 라이선싱):** OpenAI, Google 등과 파트너십을 맺고, 17년간 축적된 검증된 기술 지식을 AI 모델 학습용으로 제공합니다.
+* **AI Assist (AI 기반 검색):** 기존의 검색 방식을 넘어, AI 요약과 커뮤니티의 전문 지식을 결합한 대화형 검색 도구를 도입했습니다. (GA 출시, 높은 사용자 호응)
+* **MCP 서버 지원:** AI 에이전트나 IDE(통합개발환경)에서 직접 스택 오버플로우의 지식을 가져다 쓸 수 있도록 MCP(Model Context Protocol) 호환 서버를 제공합니다.
+
+#### **4. 가장 중요한 화두: 출처 표기 (Attribution)**
+
+* **문제:** AI가 정보를 제공할 때 출처가 불분명하면 신뢰가 무너집니다.
+* **해결책:** AI가 정보를 어디서 가져왔는지 명확히 밝히는 **'출처 표기(Attribution)'**가 필수적입니다. 이는 정보를 생산한 인간 창작자에 대한 존중이자, 지속 가능한 AI 생태계를 위한 전제 조건입니다.
+
+
